--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -4,6 +4,18 @@ ja:
       payment_method:
         credit_card: "クレジットカード"
         transfer: "銀行振込"
+      order_status:
+        wait_payment: '入金待ち'
+        confirm_payment: '入金確認'
+        making: '作成中'
+        preparing_ship: '発送準備中'
+        finish_prepare: '発送済み'
+    order_detail:
+      manufacture_status:
+        impossible_manufacture: '制作不可'
+        waiting_manufacture: '製作待ち'
+        manufacturing: '製作中'
+        finish: '製作完了'
 
       # address:
       #   your_address: "ご自身の住所"
