admin order show correction

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -4,14 +4,14 @@ ja:
       payment_method:
         credit_card: "クレジットカード"
         transfer: "銀行振込"
-      order_status:
+      status:
         wait_payment: '入金待ち'
         confirm_payment: '入金確認'
         making: '作成中'
         preparing_ship: '発送準備中'
         finish_prepare: '発送済み'
     order_detail:
-      manufacture_status:
+      making_status:
         impossible_manufacture: '制作不可'
         waiting_manufacture: '製作待ち'
         manufacturing: '製作中'
